Upgrade the baseline to Micronaut 3.1 and general cleanup (#291)
* Upgrade the baseline to Micronaut 3.1 and general cleanup

* Update circleci config

* Update circleci config

* test build with new orb version

* bump version of vydev/trafficinfo-orb to 0.2.0

Co-authored-by: Daniel <daniel@engfeldt.net>