@@ -8,22 +8,19 @@
 plugins {
     kotlin("jvm")
     kotlin("kapt")
+    id("com.github.johnrengelman.shadow") version "7.1.0"
+    id("io.micronaut.application") version "2.0.6"
     id("org.jetbrains.kotlin.plugin.allopen")
-
-    id("com.github.johnrengelman.shadow") version "7.0.0"
-    id("application")
-    id("org.jlleitschuh.gradle.ktlint") version "10.0.0"
-    id("org.sonarqube") version "3.2.0"
     id("jacoco")
+    id("org.sonarqube") version "3.3"
+    id("org.jlleitschuh.gradle.ktlint") version "10.2.0"
 }
 
 group = "no.vy.trafficinfo.baseline.micronaut"
 
 val version: String by project
 val micronautVersion: String by project
-val kotlinVersion: String by project
 val spekVersion: String by project
-val junitVersion: String by project
 val artifactGroup = group
 val artifactVersion = version
 val targetJvmVersion: String by project
@@ -45,10 +42,30 @@ repositories {
     }
 }
 
-val developmentOnly = configurations.create("developmentOnly")
+micronaut {
+    runtime("netty")
+    testRuntime("junit5")
+    processing {
+        incremental(true)
+        annotations("no.vy.trafficinfo.baseline.micronaut.*")
+    }
+}
 
-configurations {
-    developmentOnly
+kotlin {
+    // Opens up the the required compiler packages to ensure KAPT works with JDK16
+    kotlinDaemonJvmArgs = listOf(
+        "-Dfile.encoding=UTF-8",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    )
 }
 
 dependencies {
@@ -59,70 +76,70 @@ dependencies {
 
     /**
      * Micronaut framework dependencies.
+     *
+     * micronaut-inject-java and micronaut-validation are omitted
+     * due to the micronaut application plugin adding them by default.
      */
-    annotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-    annotationProcessor("io.micronaut:micronaut-inject-java")
-    annotationProcessor("io.micronaut:micronaut-validation")
-    annotationProcessor("io.micronaut.configuration:micronaut-openapi")
-    annotationProcessor("io.micronaut.security:micronaut-security")
+    kapt(platform("io.micronaut:micronaut-bom:$micronautVersion"))
+    kapt("io.micronaut:micronaut-http-validation")
+    kapt("io.micronaut.openapi:micronaut-openapi")
+    kapt("io.micronaut.security:micronaut-security")
+//    kapt("io.micronaut.micrometer:micronaut-micrometer-annotation")
 
     implementation(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
+    implementation("io.micronaut:micronaut-runtime")
+    implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
+
     implementation("io.micronaut:micronaut-inject")
     implementation("io.micronaut:micronaut-validation")
-    implementation("io.micronaut:micronaut-runtime")
-    implementation("io.micronaut:micronaut-http-server-netty")
     implementation("io.micronaut:micronaut-http-client")
-    implementation("io.micronaut:micronaut-discovery-client")
-    implementation("io.micronaut.aws:micronaut-aws-common")
-    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-cloudwatch")
     implementation("io.micronaut:micronaut-tracing")
+    implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut.discovery:micronaut-discovery-client")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-core")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-cloudwatch")
+    implementation("io.micronaut.reactor:micronaut-reactor")
+
     implementation("io.micronaut.security:micronaut-security")
     implementation("io.micronaut.security:micronaut-security-jwt")
+
+    // implementation("io.micronaut.aws:micronaut-aws-sdk-v1") // Switch to this to use sdk-v1 from aws, Required by cantara sqs-util
+    implementation("io.micronaut.aws:micronaut-aws-sdk-v2")
     implementation("io.micronaut.aws:micronaut-aws-parameter-store")
+
     implementation("io.micronaut.cache:micronaut-cache-caffeine")
     implementation("io.micronaut.problem:micronaut-problem-json")
-
-    kapt(platform("io.micronaut:micronaut-bom:$micronautVersion"))
-    kapt("io.micronaut:micronaut-inject-java")
-    kapt("io.micronaut:micronaut-validation")
-    kapt("io.micronaut.security:micronaut-security")
-    kapt("io.micronaut.configuration:micronaut-openapi")
 
     /**
      * Trafficinfo Common Dependencies.
      */
     implementation("no.vy.trafficinfo.common:logging:0.0.3")
-    implementation("no.vy.trafficinfo.common:security:0.1.2")
 
     /**
      * Third-party dependencies.
      */
-    implementation("com.amazonaws:aws-java-sdk-ssm:1.11.994")
-    implementation("no.cantara.aws:sqs-util:0.7.6")
     implementation("io.swagger.core.v3:swagger-annotations")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-    implementation("ch.qos.logback:logback-classic")
+    implementation("com.fasterxml.jackson.module:jackson-module-parameter-names")
+    implementation("com.fasterxml.jackson.module:jackson-module-blackbird")
 
     /**
      * Test dependency configurations.
      */
-    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
-    testImplementation(platform("io.micronaut:micronaut-bom:$micronautVersion"))
     testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
     testImplementation("org.junit.jupiter:junit-jupiter-api")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-
     testImplementation("org.assertj:assertj-core")
     testImplementation("com.github.tomakehurst:wiremock:2.27.2")
     testImplementation("io.mockk:mockk:1.12.0")
 
-    kaptTest(platform("io.micronaut:micronaut-bom:$micronautVersion"))
-    kaptTest("io.micronaut:micronaut-inject-java")
-    kaptTest("io.micronaut:micronaut-validation")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 }
 
 application {
-    mainClassName = "no.vy.trafficinfo.baseline.micronaut.Application"
+    mainClass.set("no.vy.trafficinfo.baseline.micronaut.Application")
 }
 
 subprojects {
@@ -141,22 +158,16 @@ jacoco {
 tasks {
     jacocoTestReport {
         reports {
-            xml.isEnabled = true
-            html.isEnabled = false
-            csv.isEnabled = false
+            xml.required.set(true)
+            html.required.set(false)
+            csv.required.set(false)
         }
     }
 
     test {
-        useJUnitPlatform()
-        classpath += developmentOnly
         systemProperty("micronaut.environments", "test")
         systemProperty("micronaut.env.deduction", false)
         dependsOn(ktlintCheck)
-    }
-
-    allOpen {
-        annotation("io.micronaut.aop.Around")
     }
 
     compileKotlin {
